--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -15,6 +15,10 @@
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+.navbar-header{
+  width: 100%;
+}
+
 .navbar-default{
   /* Sets the header background */
   background-color: #7aba7a;
