created content section

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   background-color: #e5e5d8;
 }
+
+p {
+  font-family: 'Source Sans Serif', sans-serif;
+}
