--- a/src/stylesheets/Section.css
+++ b/src/stylesheets/Section.css
@@ -7,8 +7,7 @@
 }
 
 .section-row {
-  padding-top: 0px;
-  background-color: #666666;
+  padding-left: 20px;
 }
 
 .section-content {
@@ -18,10 +17,6 @@
   border-color: #333333;
   font-size: 18px;
   min-height: 180px;
-}
-
-.section-content > img {
-  animation: spin 4s linear infinite;
 }
 
 .section-title {
